--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<script type="text/javascript" src="scripts/certified.js"></script>
-	
+	<script src="phonegap.js"></script>
 	
 </head>
 <body>
