--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<title>Certified Local</title>
 	<link rel="stylesheet" type="text/css" href="CSS/style1.css"/>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
