--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  </ul>
 	</div><!--/content -->
 <div data-role="footer" data-id="myfooter" data-position="fixed">
-	<div class="controls" data-role="controlegroup" data-type="horizontal">
+	<div class="controls" data-role="controlgroup" data-type="horizontal">
 		<a href="#menu" data-role="button" data-icon="home">Menu</a>
 	</div>
 </div>
@@ -52,7 +52,7 @@
 		
 	</div>
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
-	<div class="controls" data-role="controlegroup" data-type="horizontal">
+	<div class="controls" data-role="controlgroup" data-type="horizontal">
 		<a href="#menu" data-role="button" data-icon="home">Menu</a>
 	</div>
 </div>
@@ -76,7 +76,7 @@
 		
 	</div>
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
-	<div class="controls" data-role="controlegroup" data-type="horizontal">
+	<div class="controls" data-role="controlgroup" data-type="horizontal">
 		<a href="#menu" data-role="button" data-icon="home">Menu</a>
 	</div>
  </div>
@@ -89,7 +89,7 @@
 
 	
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
-	<div class="controls" data-role="controlegroup" data-type="horizontal">
+	<div class="controls" data-role="controlgroup" data-type="horizontal">
 		<a href="#menu" data-role="button" data-icon="home">Menu</a>
 	</div>
 	</div>
@@ -102,7 +102,7 @@
 		<div id="myFlorida"></div>
 	
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
-	<div class="controls" data-role="controlegroup" data-type="horizontal">
+	<div class="controls" data-role="controlgroup" data-type="horizontal">
 		<a href="#menu" data-role="button" data-icon="home">Menu</a>
 	</div>
 	</div>
@@ -145,7 +145,7 @@
 	</ul>
  
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
-	<div class="controls" data-role="controlegroup" data-type="horizontal">
+	<div class="controls" data-role="controlgroup" data-type="horizontal">
 		<a href="#menu" data-role="button" data-icon="home">Menu</a>
 	</div>
 	</div>
