--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div data-role="content">
 	   <ul data-role="listview" data-inset="true">
 		<li><a href="#instructions">How To Play</a></li>
-		<li><a href="#rank">Current Rank</a></li>
+		<li><a href="#rank" onClick="rankPage()">Current Rank</a></li>
 		<li><a href="#search">Search for Nearby Jewels</a></li>
 		<!--<li><a href="#map" onClick="initialize()">Map of Florida Sites</a></li>-->
 		<li><a href="#sites">List of Sites</a></li>
@@ -48,7 +48,7 @@
   </div>
 	<div class="content">
 		<h2>How to Play</h2>
-		<p>Florida is veritable treasure trove of destination "gems".  Locals knows the hidden jewels of the area.  Travel the state finding the true treasure of Florida, her cultural and natural jewels.  Unlock the bounty the state has to offer while raising your rank from Recluse to Tourist all the way to Certified Local.  Check out a map of all of Florida's jewels or start exploring!</p>
+		<p>Florida is veritable treasure trove of destination "gems".  Locals know the hidden jewels of the area.  Travel the state finding the true treasure of Florida, her cultural and natural jewels.  Unlock the bounty the state has to offer while raising your rank from Recluse to Tourist all the way to Certified Local.  Check out a map of all of Florida's jewels or start exploring!</p>
 		
 	</div>
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
