--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
 	<div class="content">
 		<h2>How to Play</h2>
-		<p>Florida is veritable treasure trove of destination "gems".  Locals know the hidden jewels of the area.  Travel the state finding the true treasure of Florida, her cultural and natural jewels.  Unlock the bounty the state has to offer while raising your rank from Recluse to Tourist all the way to Certified Local.  Check out a map of all of Florida's jewels or start exploring!</p>
+		<p>Florida is veritable treasure trove of destination "gems".  Locals know the hidden jewels of the area.  Travel the state finding the true treasure of Florida, her cultural and natural sites.  Unlock the bounty the state has to offer while raising your rank from Recluse to Tourist all the way to Certified Local.  Check out a map of all of Florida's jewels or start exploring!</p>
 		
 	</div>
 	<div data-role="footer" data-id="myfooter" data-position="fixed">
@@ -120,9 +120,9 @@
 	<input id="myFilter" data-type="search">
 	</form>
 	<ul data-role="listview" data-filter="true" data-input="#myFilter">
-		<li class="search"><a href="#">Appalachicola</a></li>
-		<li class="search"><a href="#">Big Lagoon</a></li>
-		<li class="search"><a href="#">Bill Baggs</a></li> 
+		<li class="search"><a href="#">Playground</a></li>
+		<li class="search"><a href="#">St. Augustine Shores</a></li>
+		<li class="search"><a href="#">Matanzas River</a></li> 
 		<li class="search"><a href="#">Blue Springs</a></li>
 		<li class="search"><a href="#">Castillo de San Marcos</a></li>
 		<li class="search"><a href="#">Cedar Key</a></li>
