added florida map back in

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<li><a href="#instructions">How To Play</a></li>
 		<li><a href="#rank" onClick="rankPage()">Current Rank</a></li>
 		<li><a href="#search">Search for Nearby Jewels</a></li>
-		<!--<li><a href="#map" onClick="initialize()">Map of Florida Sites</a></li>-->
+		<li><a href="#map" onClick="initialize()">Map of Florida Sites</a></li>
 		<li><a href="#sites">List of Sites</a></li>
 	  </ul>
 	</div><!--/content -->
@@ -96,7 +96,7 @@
 </div>
 
 
-<!-- Page 5 Map 
+<!-- Page 5 Map -->
  <div data-role="page" data-theme="a" id="map">
   		<div data-role="content" id="content">
 		<div id="myFlorida"></div>
@@ -107,7 +107,7 @@
 	</div>
 	</div>
 </div>
--->
+
 <!-- Page 6 Search -->
 <div data-role="page" data-theme="a" id="sites">
   <div data-role="header">
